Add location management and Selenium stealth scraping utilities
- Implemented LocationManager for handling location formats for Idealista, Habitaclia, and Fotocasa.
- Added methods for converting locations, retrieving suggested locations, and searching locations.
- Introduced SeleniumStealth class for advanced scraping techniques to evade detection, including human-like navigation and anti-detection strategies.
- Configured WebDriver with stealth options and logging for better debugging.
- Included methods for simulating human behavior during navigation and interaction with web elements.

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,25 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+debug_idealista_page.html
+NUEVA_INTERFAZ.md
+SCRAPERS_ACTUALIZADOS.md
+sistema_antibot_info.py
+TELEFONO_CLICK_IMPLEMENTADO.md
+test_encoding.py
+test_final_antibot.py
+test_idealista_advanced.py
+test_idealista_antibot.py
+test_idealista_final.py
+test_idealista_selenium_primary.py
+test_idealista.py
+test_locations.py
+test_logs.py
+test_pagination.py
+test_phone_extraction.py
+test_selenium_idealista.py
+test_simplified.py
+test_urls.py
+test_workflow.py
+Documentacion/documentacionFuncional.md
+scraper/__init__.py
