Add Fotocasa scraping functionality with Selenium and enhance existing scraper

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,23 @@ scraper/__init__.py
 test_phone_debug.py
 debug_telefonos.py
 app_backup.py
+recovery_bloqueo.py
+alternativas_fotocasa.py
+debug_fotocasa_individual.html
+debug_fotocasa_individual.py
+debug_fotocasa_links.py
+debug_fotocasa_page.html
+debug_fotocasa_selenium_avanzado.py
+debug_fotocasa_selenium.html
+fotocasa_rescate.py
+fotocasa_ultra_stealth.py
+scraper_conservador.py
+test_antibloqueo_fotocasa.py
+test_busqueda_fotocasa.py
+test_fotocasa_completo.py
+test_fotocasa_final.py
+test_fotocasa_individual.py
+test_fotocasa_mejorado.py
+test_fotocasa_particular_decision.py
+.gitignore
+test_ip_check.py
